# 42-True

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-schema-feedback.yml  02-classification-taxonomy.yml  03-privacy-architecture.yml  04-production-network.yml  05-stewardship-commons.yml  06-prior-work-correction.yml  config.yml
.github/workflows/: ci.yaml
data/: example_intent_pairs.jsonl
forty_two_true/: __init__.py  intent_pair.py  schema.py
forty_two_true/recipes/: README.md  __init__.py  classify.py  declare.py  match.py  verify.py
paper/: README.md
tests/: test_example_data.py  test_intent_pair.py
